--- a/basics.yml
+++ b/basics.yml
@@ -18,21 +18,7 @@ d1:
 d2:
   title: The Players Table
   type: yesno
-  content: |-
-    +----------+------+------------------+----------+--------+
-    | PlayerID | HP   | Name             | Strength | Class  |
-    +----------+------+------------------+----------+--------+
-    |  8927412 |   20 | steel56          |      100 | light  |
-    | -1635515 |   50 | cloudseeker11    |      200 | medium |
-    |  2121575 |   25 | bastion73        |       50 | light  |
-    |  6598247 |  110 | ace1%            |     1000 | heavy  |
-    | -3764183 |   15 | delta732         |      100 | light  |
-    | -1243723 |   20 | epsilon32        |      100 | light  |
-    |  5321686 |  125 | chariot746       |     1250 | heavy  |
-    |  3178214 |   40 | shadow_flight832 |      200 | medium |
-    | -5464515 |   20 | anvil153         |      100 | light  |
-    |  2843295 |   20 | sparks87         |     1000 | heavy  |
-    +----------+------+------------------+----------+--------+
+  command: mysql -h localhost -u sql_tutor -D sql_tutor -t -e 'SELECT * FROM Players;'
 
 d3:
   title: The SELECT statement
@@ -200,6 +186,7 @@ d19:
     CONCAT(str1, str2): Concatenates two strings.
     STRCMP(str1, str2): Compares two strings (returns 0 if strings match, -1 if str1 < str2, 1 if str1 > str2).
     TRIM(str1): Removes leading and trailing whitespaces from the string.
+    
     AVG, MIN, MAX, CEIL, FLOOR: returns the average, min, max, ceil, floor of values in a column.
     COUNT(): Counts number of rows.
 
